--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body{
 ion-icon{
     position: relative;
     z-index: 1;
+    margin: 5px;
    
 }
 .cabecalho, .rodape{
@@ -148,13 +149,19 @@ ion-icon{
 
   .lista-participantes {
     margin:5% ;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around; 
+    font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
   
   }
 
   li{
     display: flex;
     align-items: center; 
-    margin-bottom: 5px;
     list-style-type: none;
    
   }
+
