--- a/styles.css
+++ b/styles.css
@@ -45,16 +45,16 @@ ion-icon{
     display: flex;
   flex-direction: column;
 }
-.rodape > button{
+.rodape > .input > button{
     border: none;
     background-color: #FFFFFF;
 }
-.rodape > button > ion-icon{
+.rodape > .input > button > ion-icon{
     font-size: 26px;
     margin-right: 15px;
 }
 
-.rodape > input{
+.rodape > .input > input{
     border: none;
     width: 299px;
     height: 40px;
@@ -63,8 +63,22 @@ ion-icon{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
+.input{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 .rodape{
     box-shadow: 0 -4 6 rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+
+}
+#destinatario{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
 }
 
 .sidebar{
@@ -167,7 +181,7 @@ ion-icon{
 
 
   .selected::after {
-    content: '✔'; /* Checkmark */
+    content: '✔';
     font-size: 18px;
     color: green;
     margin-left: 10px;
@@ -182,10 +196,17 @@ ion-icon{
     display: flex;
     align-items: center;
     margin-bottom: 5px;
-    cursor: pointer; /* Adiciona um cursor de pointer ao passar sobre o item */
+    cursor: pointer; 
   }
 
   .visibility-options ion-icon {
     font-size: 20px;
     margin-right: 10px;
+    cursor: pointer; 
+  }
+  #destinatario {
+    font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+    margin: 10px;
   }
